tests/node_haste/node_haste.exp
Error --------------------------------------------------- foo/bar/client.js:7:27

Cannot resolve module `annotation`.

Error: foo/bar/client.js:7
  7: var unreachable = require('annotation');
                               ^^^^^^^^^^^^ Cannot resolve module `annotation`.


Found 1 error
